syntax = "proto3";

package pb;

option go_package = "./;pb";

service LoginService {
    rpc LoginUser(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
}

